--- a/recipe_analysis.ipynb
+++ b/recipe_analysis.ipynb
@@ -352,33 +352,28 @@
    "source": [
     "  \n",
     "#### 1. Degree Centrality\n",
-    "Degree centrality measures the number of direct connections a node has within the network. In real-world, for example in a social network, a user with a high degree centrality is well-connected meaning it has many friends, or in an airline network an airport with high degree centrality has connections to many destinations.\n",
+    "Degree centrality measures the number of direct connections a node has within the network. A recipe with high degree centrality is one that shares a significant number of ingredients with many other recipes. These recipes likely use common ingredients and might represent versatile or foundational recipes that connect to many others.\n",
     "\n",
     "During the randomization the edges are randomly rewired, but the node degrees remain unchanged, so the degree distribution remains the same, and therefore, the Degree Centrality remains unchanged, as the total number of connections for each node remained constant. Thats why it has 1.0 correlation.\n",
     "\n",
     "#### 2. Closeness Centrality\n",
-    "Closeness centrality reflects how quickly a node can access other nodes in the network, measured by the average shortest path from that node to all others. \n",
+    "Closeness centrality reflects how quickly a node can access other nodes in the network, measured by the average shortest path from that node to all others. A recipe with high closeness centrality can quickly \"reach\" or is closely connected to other recipes in the network. These recipes might be versatile in the sense that they use a set of ingredients that frequently appear in other recipes, making them central to the graph.\n",
     "\n",
-    "Closeness Centrality shows lower correlation because overall the shortest paths are disrupted because of the randomization. It can create new shortest paths, but overall it reshuffles the natural structure that real-world networks have and disrupts a carefully desinged network like the airline network. We can see that the airline network shows the lowest correlation after randomization, probably because it is not a social network, but a highly structured and efficiently designed system. \n",
+    "Closeness Centrality shows lower correlation because overall the shortest paths are disrupted because of the randomization.\n",
     "\n",
     "#### 3. Betweenness Centrality\n",
-    "Betweenness centrality measures the extent to which a node serves as a bridge along the shortest paths between other nodes. Nodes with high betweenness centrality are critical for information flow or connectivity, acting as intermediaries. In a social network, these could be influential users who connect disparate groups; in a transportation network, they could be major airports that facilitate connections between regions.\n",
+    "Betweenness centrality measures the extent to which a node serves as a bridge along the shortest paths between other nodes. Nodes with high betweenness centrality are critical for information flow or connectivity, acting as intermediaries. A recipe with high betweenness centrality acts as a \"bridge\" between clusters of recipes. These recipes likely share ingredients with multiple distinct groups of recipes and could play a crucial role in connecting different cuisines or cooking styles.\n",
     "\n",
     "The Betweenness Centrality is also affected by the randomization because when the network is randomized shortest paths are removed or altered, and the nodes that served as intermediaries may no longer fulfill this role. This highlights the sensitivity of betweenness centrality to network structure. \n",
     "\n",
     "#### 4. Eigenvector Centrality\n",
-    "Eigenvector centrality evaluates a node's influence based not just on the number of connections but also on the quality and influence of its neighbors. A node connected to other well-connected nodes scores higher. This measure captures the notion of influence within a network; in social networks, influential individuals or key opinion leaders might have high eigenvector centrality, while in transport networks, major hubs that connect to other important airports may rank high.\n",
+    "Eigenvector centrality evaluates a node's influence based not just on the number of connections but also on the quality and influence of its neighbors. A node connected to other well-connected nodes scores higher. A recipe with high eigenvector centrality is connected to other influential recipes. These recipes are central to the overall structure of the graph and might represent dishes with ingredients that are foundational to many popular or versatile recipes.\n",
     "\n",
-    "With the Eigenvector Centrality the correlation is affected less by the randomization,because it depends on how well the randomization maintains the overall connectivity and flow of importance across nodes. While randomization may disrupt connections, eigenvector centrality continues to reflect the influence of nodes based on their connections to other significant nodes. This is especially true in structured networks like airline networks, where links to major hubs are crucial. However, randomization can still lead to a loss of hierarchical relationships affecting the overall impact of key connections.\n",
+    "With the Eigenvector Centrality the correlation is affected less by the randomization,because it depends on how well the randomization maintains the overall connectivity and flow of importance across nodes. While randomization may disrupt connections, eigenvector centrality continues to reflect the influence of nodes based on their connections to other significant nodes.\n",
     "\n",
     "#### Observed Differences and Similarities\n",
     "\n",
-    "Degree centrality remained stable in all cases, while closeness, betweenness, and eigenvector centralities were significantly affected by randomization, showcasing how the specific structure of the network influences the sensitivity of different centrality measures.\n",
-    "The airline network displayed the lowest correlation in centrality metrics after randomization, meaning it relies more on connectivity than other types of networks.\n",
-    "\n",
-    "\n",
-    "In both structured (e.g., airline) and less structured networks (e.g., social networks), the centrality measures reflect the inherent organization of connections, reinforcing the idea that network structure is critical for maintaining efficiency and influence. Regardless of the network type, centrality measures exhibit varying degrees of sensitivity to randomization, emphasizing that the foundational topology of the network influences how resilient it is to structural changes.\n",
-    "In all networks centrality measures highlight the way connections are organized. This reinforces the importance of network structure for maintaining efficiency and influence. Moreover, the sensitivity of centrality measures to randomization varies across different types of networks. This variation emphasizes how the basic layout of a network affects its ability to withstand changes in its structure."
+    "Degree centrality remained stable in all cases, while closeness, betweenness, and eigenvector centralities were significantly affected by randomization, showcasing how the specific structure of the network influences the sensitivity of different centrality measures.\n"
    ]
   }
  ],
