graph creation files updated + last 2 questions answered

--- a/graph_creation.ipynb
+++ b/graph_creation.ipynb
@@ -1121,15 +1121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_and_save_graphs(recipes_df, thresholds, output_dir):\n",
+    "def generate_and_save_graphs(recipes_df, thresholds):\n",
     "    for min_common in thresholds:\n",
     "        G = create_recipe_ingredient_graph(recipes_df, min_common_ingredients=min_common)\n",
     "        \n",
-    "        file_name = f\"{output_dir}/recipe_graph_min_common_{min_common}.gml\"\n",
+    "        file_name = \"final_recipe_graph_min_common_{min_common}.gml\"\n",
     "        \n",
     "        nx.write_gml(G, file_name)\n",
     "        print(f\"Graph with min_common_ingredients={min_common} saved to {file_name}\")"
@@ -1159,8 +1159,7 @@
    ],
    "source": [
     "thresholds = [3, 5, 6]\n",
-    "output_dir = \"graphs\" \n",
-    "generate_and_save_graphs(recipes_df, thresholds, output_dir)"
+    "generate_and_save_graphs(recipes_df, thresholds)"
    ]
   },
   {
@@ -1169,7 +1168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_3_ingredients = nx.read_gml(\"graphs/recipe_graph_min_common_3\")"
+    "G_3_ingredients = nx.read_gml(\"final_recipe_graph_min_common_3\")"
    ]
   },
   {
